--- a/skin/frontend/meanbee/default/css/_account.scss
+++ b/skin/frontend/meanbee/default/css/_account.scss
@@ -2,9 +2,9 @@
 .account-login {
     .new-users h2 { background-image: url(../images/i_page1.gif)}
     .registered-users h2 { background-image: url(../images/i_page2.gif); }
-    .buttons-set { border: 1px solid #bbb6a5; border-top: 0; margin: 0; padding: 8px 13px; background: #dee5e8 url(../images/bkg_buttons-set1.gif) repeat-x 0 0; }
+    .buttons-set { background: #dee5e8 url(../images/bkg_buttons-set1.gif) repeat-x 0 0; border: 1px solid #bbb6a5; border-top: 0; margin: 0; padding: 8px 13px; }
     .content { background: #faf7ee url(../images/bkg_login-box.gif) repeat-x 0 0; border: 1px solid #bbb6a5; border-bottom: 0; min-height: 345px; padding: 14px 21px;
-        h2 { border-bottom: 1px solid #ddd; background-position: 0 1px; background-repeat: no-repeat; color: #e76200; font-size: em(13); font-weight: bold; margin: 0 0 14px; padding: 0 0 5px 23px; text-transform: uppercase; }
+        h2 { background-position: 0 1px; background-repeat: no-repeat; border-bottom: 1px solid #ddd; color: #e76200; font-size: em(13); font-weight: bold; margin: 0 0 14px; padding: 0 0 5px 23px; text-transform: uppercase; }
     }
 }
 
@@ -12,11 +12,11 @@
 
 /* Captcha ================================================================================ */
 .captcha-note      { clear: left; padding-top: 5px; }
-.captcha-image     { float: left; display: inline;  margin: 0; position: relative; width: 258px; }
+.captcha-image     { display: inline; float: left; margin: 0; position: relative; width: 258px; }
 .captcha-image .captcha-img { border: 1px solid #b6b6b6; vertical-align: bottom; width: 100%; }
 .registered-users .captcha-image { margin: 0;}
 .captcha-reload { cursor: pointer; position: absolute; right: 2px; top: 2px; }
-.captcha-reload.refreshing  { animation:rotate 1.5s infinite linear; -webkit-animation:rotate 1.5s infinite linear; -moz-animation:rotate 1.5s infinite linear; }
+.captcha-reload.refreshing  { @include animation(rotate, 1.5s, infinite, linear); }
 
 @-webkit-keyframes rotate {
     0% { -webkit-transform:rotate(0); }
@@ -35,7 +35,7 @@
 .window-overlay { background: url(../images/window_overlay.png) repeat; background: rgba(0, 0, 0, 0.35); height: 100%; left: 0; position: absolute; top: 0; width: 100%; z-index: 990; }
 
 .remember-me label { float: none; margin: 0 6px; }
-.remember-me-popup { background: #fff; border: 1px solid #ccc; -moz-box-shadow: 0 0 6px #ccc; -webkit-box-shadow: 0 0 6px #ccc; -box-shadow: 0 0 6px #ccc; left: 50%; margin: -85px 0 0 -200px; position: absolute; text-align: left; top: 50%; width: 400px; z-index: 1000;
+.remember-me-popup { background: #fff; border: 1px solid #ccc; @include boxShadow(0, 0, 6px, #ccc); left: 50%; margin: -85px 0 0 -200px; position: absolute; text-align: left; top: 50%; width: 400px; z-index: 1000;
     h3 { background: #d9e5ee; border-bottom: 1px solid #ccc; font-size: em(14); padding: 5px 10px; }
     .remember-me-popup-head { position: relative;
         .remember-me-popup-close { background: url(../images/btn_window_close.gif) no-repeat; display: block; height: 15px; position: absolute; right: 7px; text-indent: -9999em; top: 7px; width: 15px; }
