--- a/skin/frontend/meanbee/default/css/_product.scss
+++ b/skin/frontend/meanbee/default/css/_product.scss
@@ -224,7 +224,7 @@
         #handle { background: url(../images/magnifier_handle.gif) no-repeat 0 0; height: 22px; left: 0; position: absolute; top: -1px; width: 9px; }
         .btn-zoom-out { left: 2px; position: absolute; top: 0; }
         .btn-zoom-in { position: absolute; right: 2px; top: 0; }
-        &.disabled { -moz-opacity:.3; -webkit-opacity:.3; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";/*IE8*/ opacity:.3; }
+        &.disabled { @include opacity(0.3); }
     }
     .more-views {
         h2 { border-bottom: 1px solid #ccc; font-size: em(11); margin: 0 0 8px; text-transform: uppercase; }
