--- a/skin/frontend/meanbee/default/css/reset.css
+++ b/skin/frontend/meanbee/default/css/reset.css
@@ -278,7 +278,7 @@ dl,
 menu,
 ol,
 ul {
-    margin: 1em 0;
+    margin: 0;
 }
 
 dd {
@@ -292,7 +292,7 @@ dd {
 menu,
 ol,
 ul {
-    padding: 0 0 0 40px;
+    padding: 0;
 }
 
 /*
