Added border radius mixin to functions and updated styles.scss to use mixins

--- a/skin/frontend/meanbee/default/css/_functions.scss
+++ b/skin/frontend/meanbee/default/css/_functions.scss
@@ -26,3 +26,9 @@
     filter: "alpha(opacity=" + round($transparency*100) + ")";
     opacity: $transparency;
 }
+
+@mixin borderRadius($pixel) {
+    -webkit-border-radius: $pixel;
+    -moz-border-radius: $pixel;
+    border-radius: $pixel;
+}
