--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -3982,9 +3982,9 @@ tr.summary-details-excluded {
   border: 1px solid #aaa;
   margin: 12px 0 0;
   position: absolute;
-  -moz-box-shadow: 0 0 6px #ccc;
-  -webkit-box-shadow: 0 0 6px #ccc;
-  box-shadow: 0 0 6px #ccc;
+  -webkit-box-shadow: 0 0 6px #cccccc;
+  -moz-box-shadow: 0 0 6px #cccccc;
+  box-shadow: 0 0 6px #cccccc;
   text-align: left;
   width: 300px;
   z-index: 100; }
@@ -4022,11 +4022,11 @@ tr.summary-details-excluded {
   height: 15px;
   width: 15px;
   text-indent: -9999em;
-  -moz-box-shadow: 0 0 3px #999;
-  -webkit-box-shadow: 0 0 3px #999;
-  box-shadow: 0 0 3px #999;
-  -moz-border-radius: 2px;
+  -webkit-box-shadow: 0 0 3px #999999;
+  -moz-box-shadow: 0 0 3px #999999;
+  box-shadow: 0 0 3px #999999;
   -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
   border-radius: 2px; }
 
 .map-popup-content {
