--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -62,6 +62,9 @@ img {
   border: 0;
   vertical-align: top; }
 
+label, label em {
+  padding: 5px 0; }
+
 /* ============================================================================== */
 /* Table ======================================================================== */
 table {
@@ -790,7 +793,6 @@ p.required {
 /* =============================================================================== */
 /* Page Heading ================================================================== */
 .page-title {
-  border-bottom: 1px solid #ccc;
   margin: 0 0 25px;
   overflow: hidden;
   width: 100%; }
@@ -3482,31 +3484,20 @@ tr.summary-details-excluded {
 
 /* ======================================================================================= */
 /* Account Login/Create Pages ============================================================ */
-.account-login .new-users h2 {
-  background-image: url(../images/i_page1.gif); }
-.account-login .registered-users h2 {
-  background-image: url(../images/i_page2.gif); }
 .account-login .buttons-set {
-  background: #dee5e8 url(../images/bkg_buttons-set1.gif) repeat-x 0 0;
-  border: 1px solid #bbb6a5;
   border-top: 0;
   margin: 0;
   padding: 8px 13px; }
 .account-login .content {
-  background: #faf7ee url(../images/bkg_login-box.gif) repeat-x 0 0;
-  border: 1px solid #bbb6a5;
-  border-bottom: 0;
-  min-height: 345px;
   padding: 14px 21px; }
   .account-login .content h2 {
     background-position: 0 1px;
     background-repeat: no-repeat;
-    border-bottom: 1px solid #ddd;
     color: #e76200;
     font-size: 1.083em;
     font-weight: bold;
     margin: 0 0 14px;
-    padding: 0 0 5px 23px;
+    padding: 0 0 5px 0;
     text-transform: uppercase; }
 
 /* Captcha ================================================================================ */
