Ripped out all of magento default styles on account login page

--- a/skin/frontend/meanbee/default/css/_account.scss
+++ b/skin/frontend/meanbee/default/css/_account.scss
@@ -4,7 +4,7 @@
     .registered-users h2 {}
     .buttons-set { border-top: 0; margin: 0; padding: 8px 13px; }
     .content { padding: 14px 21px;
-        h2 { background-position: 0 1px; background-repeat: no-repeat; color: #e76200; font-size: em(13); font-weight: bold; margin: 0 0 14px; padding: 0 0 5px 0; text-transform: uppercase; }
+        h2 { background-position: 0 1px; background-repeat: no-repeat; font-size: em(13); font-weight: bold; margin: 0 0 14px; padding: 0 0 5px 0; text-transform: uppercase; }
     }
 }
 
