--- a/skin/frontend/meanbee/default/css/styles.css
+++ b/skin/frontend/meanbee/default/css/styles.css
@@ -280,7 +280,6 @@ ul, ol, dt {
 
 .header-container {
   background: url(../images/bkg_header.jpg) repeat 50% 0;
-  border-top: 5px solid #0d2131;
   border-bottom: 1px solid #415966; }
   .header-container .top-container {
     clear: both;
@@ -322,9 +321,8 @@ header {
     margin: 0;
     text-align: right; }
     header .welcome-msg a {
-      color: #ebbc58; }
+      color: #363636; }
   header .form-search {
-    background: url(../images/bkg_form-search.gif) no-repeat 0 0;
     height: 30px;
     padding: 1px 0 0 16px;
     position: absolute;
@@ -346,7 +344,6 @@ header {
     header .form-search button.button {
       float: left; }
       header .form-search button.button span {
-        background: url(../images/btn_search.gif) no-repeat 0 0;
         border: 0;
         font: bold 11px/21px Tahoma, Verdana, Arial, sans-serif;
         height: 21px;
@@ -359,7 +356,6 @@ header {
       top: 22px !important;
       z-index: 999; }
       header .form-search .search-autocomplete ul {
-        background-color: #f9f5f0;
         border: 1px solid #5c7989; }
       header .form-search .search-autocomplete li {
         border-bottom: 1px solid #f4eee7;
@@ -370,15 +366,14 @@ header {
         float: right;
         font-weight: bold; }
       header .form-search .search-autocomplete li.odd {
-        background-color: #fffefb; }
+        background-color: #ccc; }
       header .form-search .search-autocomplete li.selected {
-        background-color: #f7e8dd; }
+        background-color: #eee; }
   header .form-language {
     clear: both;
     padding: 5px 0 0;
     text-align: right; }
     header .form-language label {
-      color: #a7c6dd;
       font-weight: bold;
       padding-right: 5px;
       vertical-align: middle; }
@@ -396,13 +391,11 @@ header {
       font-size: 0.917em;
       background: url(../images/bkg_pipe1.gif) no-repeat 100% 60%;
       padding: 0 8px 0 7px; }
-    header .links a {
-      color: #ebbc58; }
 
 /* ============================================================================= */
 /* Footer ====================================================================== */
 .footer-container {
-  border-top: 15px solid #b6d1e2; }
+  border-top: 1px solid #363636; }
   .footer-container .bottom-container {
     margin: 0 0 5px; }
 
@@ -412,7 +405,6 @@ footer {
   text-align: center;
   width: 930px; }
   footer .store-switcher {
-    color: #fff;
     display: inline;
     margin: 0 5px 0 0; }
     footer .store-switcher label {
@@ -422,26 +414,19 @@ footer {
       padding: 0;
       vertical-align: middle; }
   footer a {
-    color: #fff;
     text-decoration: none; }
     footer a:hover {
       text-decoration: underline; }
   footer .bugs {
-    color: #ecf3f6;
+    color: #363636;
     margin: 13px 0 0; }
     footer .bugs a {
-      color: #ecf3f6;
       text-decoration: underline; }
       footer .bugs a:hover {
         text-decoration: none; }
   footer address {
-    color: #ecf3f6;
+    color: #363636;
     margin: 0 0 20px; }
-    footer address a {
-      color: #ecf3f6;
-      text-decoration: underline; }
-      footer address a:hover {
-        text-decoration: none; }
   footer ul {
     display: inline; }
   footer ul.links {
@@ -516,8 +501,7 @@ button.button {
   padding: 0;
   width: auto; }
   button.button span {
-    background: #f18200;
-    border: 1px solid #de5400;
+    background: #363636;
     color: #fff;
     display: block;
     font: bold 1em/1.583em Arial, Helvetica, sans-serif;
@@ -563,7 +547,6 @@ input.input-text:focus, select:focus, textarea:focus {
 .form-list li {
   margin: 0 0 8px; }
   .form-list li label {
-    color: #666;
     float: left;
     font-weight: bold;
     position: relative;
@@ -592,8 +575,10 @@ input.input-text:focus, select:focus, textarea:focus {
   float: left;
   width: 275px; }
 .form-list input.input-text {
+  padding-left: 5px;
   width: 254px; }
 .form-list textarea {
+  padding-left: 5px;
   height: 10em;
   width: 254px; }
 .form-list select {
@@ -1234,9 +1219,6 @@ tr.summary-details-excluded {
 
 /* =============================================================================== */
 /* Navigation ================================================================== */
-.nav-container {
-  background: #0a263d url(../images/bkg_nav0.jpg) repeat-y 50% 0; }
-
 #nav {
   font-size: 1.083em;
   margin: 0 auto;
@@ -1265,9 +1247,6 @@ tr.summary-details-excluded {
 #nav li ul span {
   white-space: normal; }
 
-#nav ul li.parent a {
-  background: url(../images/bkg_nav2.gif) no-repeat 100% 100%; }
-
 #nav ul li.parent li a {
   background-image: none; }
 
@@ -1279,7 +1258,6 @@ tr.summary-details-excluded {
   color: #d96708; }
 
 #nav a {
-  color: #a7c6dd;
   float: left;
   font-weight: bold;
   padding: 5px 12px 6px 8px; }
@@ -1291,7 +1269,6 @@ tr.summary-details-excluded {
 /* 1st Level */
 #nav ul li,
 #nav ul li.active {
-  background: #ecf3f6 url(../images/bkg_nav1.gif) repeat-x 0 100%;
   float: none;
   margin: 0;
   padding-bottom: 1px; }
@@ -1329,10 +1306,10 @@ tr.summary-details-excluded {
   top: 5px; }
 
 #nav ul li a {
-  background: #ecf3f6; }
+  background: #eee; }
 
 #nav ul li a:hover {
-  background: #d5e4eb; }
+  background: #ccc; }
 
 #nav ul li a,
 #nav ul li a:hover {
@@ -3493,7 +3470,6 @@ tr.summary-details-excluded {
   .account-login .content h2 {
     background-position: 0 1px;
     background-repeat: no-repeat;
-    color: #e76200;
     font-size: 1.083em;
     font-weight: bold;
     margin: 0 0 14px;
