--- a/app/design/frontend/meanbee/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/meanbee/default/template/persistent/customer/form/login.phtml
@@ -72,8 +72,8 @@
                     <p class="required"><?php echo $this->__('* Required Fields') ?></p>
                 </div>
                 <div class="buttons-set">
-                    <a href="<?php echo $this->getForgotPasswordUrl() ?>" class="f-left"><?php echo $this->__('Forgot Your Password?') ?></a>
                     <button type="submit" class="button" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
+                    <a href="<?php echo $this->getForgotPasswordUrl() ?>"><?php echo $this->__('Forgot Your Password?') ?></a>
                 </div>
             </div>
         </div>
