--- a/skin/frontend/meanbee/default/css/styles.scss
+++ b/skin/frontend/meanbee/default/css/styles.scss
@@ -247,7 +247,7 @@ input.input-text:focus,select:focus,textarea:focus { background-color: #edf7fd; 
 }
 
 /* Button sets */
-.buttons-set { border-top: 1px solid #e4e4e4; clear: both; margin: 4em 0 0; padding: 8px 0 0; text-align: right;
+.buttons-set { clear: both; padding: 8px 0 0; text-align: right;
     p.required { margin: 0 0 10px; }
     .back-link { float: left; margin: 0; }
     button.button { float: right; margin-left: 5px; }
@@ -256,8 +256,8 @@ input.input-text:focus,select:focus,textarea:focus { background-color: #edf7fd; 
 .buttons-set-order { margin: 10px 0 0; }
 .buttons-set-order .please-wait { padding: 12px 7px 0 0; }
 
-.fieldset { background: #fbfaf6; border: 1px solid #bbafa0; margin: 28px 0; padding: 22px 25px 12px 33px; }
-.fieldset .legend { background: #f9f3e3; border: 1px solid #f19900; color: #e76200; float: left; font-weight: bold; font-size: em(13); margin: -33px 0 0 -10px; padding: 0 8px; position: relative; }
+.fieldset { margin: 28px 0; padding: 22px 0 12px; }
+.fieldset .legend { float: left; font-weight: bold; font-size: em(13); margin: -33px 0 0 -10px; padding: 0 8px; position: relative; }
 
 /* Form Validation */
 .validation-advice { background: url(../images/validation_advice_bg.gif) no-repeat 2px 0; color: #eb340a; clear: both; font-size: em(11); font-weight: bold; line-height: 13px; margin: 3px 0 0; min-height: 13px; padding-left: 17px; }
